--- a/test/vimwiki-reader.wiki
+++ b/test/vimwiki-reader.wiki
@@ -26,6 +26,10 @@ not a header:
 === not a header ====
 
  == centred header ==
+ 
+== header with some `==` in between ==
+== header with some == in between ==
+== header with some ==in between ==
 
 == emph and strong ==
 
@@ -195,6 +199,59 @@ But this is a new paragraph.
       * 2.1
  * 3
 
+=== ordered lists with non-# identifiers ===
+1. Numbered list item 1
+2. Numbered list item 2
+3. Numbered list item 3
+
+4. Numbered list item 1
+5. Numbered list item 2
+6. Numbered list item 3
+
+1) Numbered list item 1
+2) Numbered list item 2
+3) Numbered list item 3
+
+a) Numbered list item 1
+b) Numbered list item 2
+c) Numbered list item 3
+
+A) Numbered list item 1
+B) Numbered list item 2
+C) Numbered list item 3
+
+i) Numbered list item 1
+ii) Numbered list item 2
+iii) Numbered list item 3
+
+I) Numbered list item 1
+II) Numbered list item 2
+III) Numbered list item 3
+
+c) Numbered list sub item 3
+  1. Numbered list sub sub item 1
+  2. Numbered list sub sub item 2
+d) etc.
+
+a) Numbered list sub item 1
+b) more ...
+  * and more ...
+  * ...
+- Bulleted list item 3
+
+== todo lists ==
+* [ ] task 1
+    1. [.] 5
+* [o] 3
+* [] not a todo item
+* [ ]not a todo item
+* [r] not a todo item
+* [     ] not a todo item
+* [ ] a tab in the todo list marker `[ ]`
+    III) [O] 4
+    i) [X] 6
+* [X] task 2
+
 == math ==
 
 $ \sum_i a_i^2 = 1 $
@@ -244,6 +301,11 @@ with two lines.
 This is a second paragraph with
 two lines after many blank lines.
 
+== metadata placeholders ==
+%title title
+%date 2017-5-1
+%author G. H. Hardy and Littlewood, J. E.
+
 == the todo mark ==
 TODO:
 
@@ -254,46 +316,6 @@ TODO:
 super^script^
 
 sub,,script,,
-
-== ordered lists with non-# identifiers ==
-1. Numbered list item 1
-2. Numbered list item 2
-3. Numbered list item 3
-
-4. Numbered list item 1
-5. Numbered list item 2
-6. Numbered list item 3
-
-1) Numbered list item 1
-2) Numbered list item 2
-3) Numbered list item 3
-
-a) Numbered list item 1
-b) Numbered list item 2
-c) Numbered list item 3
-
-A) Numbered list item 1
-B) Numbered list item 2
-C) Numbered list item 3
-
-i) Numbered list item 1
-ii) Numbered list item 2
-iii) Numbered list item 3
-
-I) Numbered list item 1
-II) Numbered list item 2
-III) Numbered list item 3
-
-c) Numbered list sub item 3
-  1. Numbered list sub sub item 1
-  2. Numbered list sub sub item 2
-d) etc.
-
-a) Numbered list sub item 1
-b) more ...
-  * and more ...
-  * ...
-- Bulleted list item 3
 
 == definition list ==
 
@@ -308,12 +330,6 @@ Term 2::
 | \/ | \/ | > | g |
 | h  | >  | > | > |
 
-== placeholders ==
-%title title
+== control placeholders ==
 %template template
-%date 2017-5-1
-%author G. H. Hardy and Littlewood, J. E.
 
-== todo lists ==
-* [ ] task 1
-* [ ] task 2
