added support for diary links. added related test.

--- a/test/vimwiki-reader.wiki
+++ b/test/vimwiki-reader.wiki
@@ -157,6 +157,8 @@ mailto:hello@bye.com
 
 [[Todo List#Tomorrow|Tasks for tomorrow]]
 
+[[diary:2017-05-01]]
+
 [[file:../assets/data.csv|Important Data]]
 
 === links with thumbnails ===
