RST reader:  support anchors.
E.g.

    `hello`

    .. _hello:

    paragraph

This is supported by putting "paragraph" in a Div with
id `hello`.

Closes #262.

--- a/test/command/262.md
+++ b/test/command/262.md
@@ -7,3 +7,20 @@
 ^D
 <p><a href="example.com">hello</a> and <a href="example.com">goodbye</a></p>
 ```
+
+```
+% pandoc -f rst
+`hello`_ `goodbye`_
+
+.. _hello:
+.. _goodbye:
+
+paragraph
+^D
+<p><a href="#hello">hello</a> <a href="#goodbye">goodbye</a></p>
+<div id="hello">
+<div id="goodbye">
+<p>paragraph</p>
+</div>
+</div>
+```
