LaTeX template:  added `natbiboptions` variable.
Closes #3768.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -113,7 +113,7 @@ $if(geometry)$
 \usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
 $endif$
 $if(natbib)$
-\usepackage{natbib}
+\usepackage[$natbiboptions$]{natbib}
 \bibliographystyle{$if(biblio-style)$$biblio-style$$else$plainnat$endif$}
 $endif$
 $if(biblatex)$
