Removed texmath macro material from Markdown reader.
Changed types for Text.Pandoc.Readers.LaTeX's
rawLaTeXInline and rawLaTeXBlock.  (Both now return a String,
and they are polymorphic in state.)

Added orgMacros field to OrgState.

API change

--- a/test/command/3558.md
+++ b/test/command/3558.md
@@ -4,5 +4,7 @@
 hello
 \endmulti
 ^D
-[Para [RawInline (Format "tex") "\\startmulti\n",Str "hello",SoftBreak,RawInline (Format "tex") "\\endmulti"]]
+[RawBlock (Format "latex") "\\startmulti"
+,Plain [Str "hello"]
+,RawBlock (Format "latex") "\\endmulti"]
 ```
