Get rid of readerApplyMacros in ReaderOptions.
Now we just check the `latex_macros` reader extension.

--- a/test/command/3558.md
+++ b/test/command/3558.md
@@ -1,10 +1,12 @@
 ```
 % pandoc -t native
 \startmulti
+
 hello
+
 \endmulti
 ^D
 [RawBlock (Format "latex") "\\startmulti"
-,Plain [Str "hello"]
+,Para [Str "hello"]
 ,RawBlock (Format "latex") "\\endmulti"]
 ```
