--- a/test/command/3558.md
+++ b/test/command/3558.md
@@ -1,12 +1,12 @@
 ```
 % pandoc -t native
-\startmulti
+\multi
 
 hello
 
 \endmulti
 ^D
-[RawBlock (Format "latex") "\\startmulti"
+[RawBlock (Format "latex") "\\multi"
 ,Para [Str "hello"]
 ,RawBlock (Format "latex") "\\endmulti"]
 ```
