--- a/test/command/1390.md
+++ b/test/command/1390.md
@@ -3,8 +3,11 @@
 \newcommand\foo{+}
 Testing: $\mu\foo\eta$.
 ^D
-[Para [Str "Testing:",Space,Math InlineMath "\\mu+\\eta"]]
+[Para [Str "Testing:",Space,Math InlineMath "\\mu+\\eta",Str "."]]
 ```
+
+<!-- It would be nice to handle this case, but I don't
+know how:
 
 ```
 % pandoc -f latex -t native
@@ -13,3 +16,5 @@ $\hat\vecx$
 ^D
 [Para [Math InlineMath "\\hat{a+b}"]]
 ```
+-->
+
