--- a/test/command/3816.md
+++ b/test/command/3816.md
@@ -1,5 +1,5 @@
 ```
-% pandoc --mathjax -t html5
+% pandoc --mathjax -t html5 --wrap=preserve
 This is an equation:
 \begin{equation}
 y+2 = 3
@@ -16,14 +16,17 @@ This is Euler's formula:
 e^{i\pi} + 1 & = & 0.
 \end{eqnarray*}
 ^D
-<p>This is an equation: <span class="math display">\[\begin{equation}
+<p>This is an equation:
+<span class="math display">\[\begin{equation}
 y+2 = 3
 \end{equation}\]</span></p>
-<p>This is a system of equations: <span class="math display">\[\begin{align*}
+<p>This is a system of equations:
+<span class="math display">\[\begin{align*}
 x^2+y^2 &amp; = 2 \\
 \sin(y) &amp; = 0.5
 \end{align*}\]</span></p>
-<p>This is Euler’s formula: <span class="math display">\[\begin{eqnarray*}
+<p>This is Euler’s formula:
+<span class="math display">\[\begin{eqnarray*}
 e^{i\pi} + 1 &amp; = &amp; 0.
 \end{eqnarray*}\]</span></p>
 ```
