Added new translations.

--- a/data/translations/de.yaml
+++ b/data/translations/de.yaml
@@ -1,19 +1,21 @@
-Preface: Vorwort
-References: Literatur
 Abstract: Zusammenfassung
-Bibliography: Literaturverzeichnis
-Chapter: Kapitel
 Appendix: Anhang
+Bibliography: Literaturverzeichnis
+Cc: Verteiler
+Chapter: Kapitel
 Contents: Inhaltsverzeichnis
+Encl: Anlage(n)
+Figure: Abbildung
+Glossary: Glossar
+Index: Index
 ListOfFigures: Abbildungsverzeichnis
 ListOfTables: Tabellenverzeichnis
-Index: Index
-Figure: Abbildung
-Table: Tabelle
-Part: Teil
 Page: Seite
+Part: Teil
+Preface: Vorwort
 Proof: Beweis
+References: Literatur
 See: siehe
 SeeAlso: siehe auch
-Cc: Verteiler
+Table: Tabelle
 To: An
