--- a/data/translations/en.yaml
+++ b/data/translations/en.yaml
@@ -1,19 +1,21 @@
-Preface: Preface
-References: References
 Abstract: Abstract
-Bibliography: Bibliography
-Chapter: Chapter
 Appendix: Appendix
+Bibliography: Bibliography
+Cc: cc
+Chapter: Chapter
 Contents: Contents
+Encl: encl
+Figure: Figure
+Glossary: Glossary
+Index: Index
 ListOfFigures: ListOfFigures
 ListOfTables: ListOfTables
-Index: Index
-Figure: Figure
-Table: Table
-Part: Part
 Page: page
+Part: Part
+Preface: Preface
 Proof: Proof
+References: References
 See: see
 SeeAlso: see also
-Cc: cc
+Table: Table
 To: To
