--- a/data/translations/fr.yaml
+++ b/data/translations/fr.yaml
@@ -1,19 +1,20 @@
-Preface: Préface
-References: Références
 Abstract: Résumé
-Bibliography: Bibliographie
-Chapter: Chaptire
 Appendix: Annexe
+Bibliography: Bibliographie
+Cc: Copie à
+Chapter: Chaptire
 Contents: Table des matières
+Figure: Fig.
+Glossary:
+Index: Index
 ListOfFigures: Table des figures
 ListOfTables: Liste des tableaux
-Index: Index
-Figure: Fig.
-Table: Tab.
-Part: partie
 Page: page
+Part: partie
+Preface: Préface
 Proof: Démonstration
+References: Références
 See: voir
 SeeAlso: voir aussi
-Cc: Copie à
+Table: Tab.
 To:
