CommonMark writer: prefer pipe tables to HTML tables...
...even if it means losing relative column width information.
See #3734.

--- a/test/command/3734.md
+++ b/test/command/3734.md
@@ -37,3 +37,14 @@
 |--------------|-------|--------------------------------------------------------------------------|
 | aaaaaaaaaaaa |       | cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc |
 ```
+
+```
+% pandoc -t gfm
+| aaaaaaaaaaaa | bbbbb | ccccccccccc                                                              |
+|--------------|-------|--------------------------------------------------------------------------|
+| aaaaaaaaaaaa |       | cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc |
+^D
+| aaaaaaaaaaaa | bbbbb | ccccccccccc                                                              |
+| ------------ | ----- | ------------------------------------------------------------------------ |
+| aaaaaaaaaaaa |       | cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc |
+```
