--- a/test/writer.latex
+++ b/test/writer.latex
@@ -1,3 +1,6 @@
+\PassOptionsToPackage{unicode=true}{hyperref} % options for packages loaded elsewhere
+\PassOptionsToPackage{hyphens}{url}
+%
 \documentclass[]{article}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
@@ -23,9 +26,8 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 }
-\PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
 \usepackage{fancyvrb}
-\usepackage[unicode=true]{hyperref}
+\usepackage{hyperref}
 \hypersetup{
             pdftitle={Pandoc Test Suite},
             pdfauthor={John MacFarlane; Anonymous},
