Name change OSX -> macOS
fix commit c96b64e

This commit finishes remaining osx to macOS change, as well as replacing MacOS with macOS.

The reason for the later one is because the "correct" casing of macOS is like that. Apple styles it to looks like iOS, watchOS, tvOS, etc. And unfortunately they all start with a lowercase letter, making propercasing (or even title-casing) odd.

--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -638,7 +638,7 @@ Files in the user data directory are ignored.
 .TP
 .B \f[C]\-\-eol=crlf\f[]|\f[C]lf\f[]|\f[C]native\f[]
 Manually specify line endings: \f[C]crlf\f[] (Windows), \f[C]lf\f[]
-(MacOS/linux/unix), or \f[C]native\f[] (line endings appropriate to the
+(macOS/linux/unix), or \f[C]native\f[] (line endings appropriate to the
 OS on which pandoc is being run).
 The default is \f[C]native\f[].
 .RS
@@ -760,7 +760,7 @@ Implies \f[C]\-\-standalone\f[].
 .TP
 .B \f[C]\-\-resource\-path=\f[]\f[I]SEARCHPATH\f[]
 List of paths to search for images and other resources.
-The paths should be separated by \f[C]:\f[] on linux, unix, and MacOS
+The paths should be separated by \f[C]:\f[] on linux, unix, and macOS
 systems, and by \f[C];\f[] on Windows.
 If \f[C]\-\-resource\-path\f[] is not specified, the default resource
 path is the working directory.
