fix casing of Linux, UNIX, and Windows

--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -304,7 +304,7 @@ If \f[I]FILE\f[] is \f[C]\-\f[], output will go to \f[I]stdout\f[].
 Specify the user data directory to search for pandoc data files.
 If this option is not specified, the default user data directory will be
 used.
-This is, in Unix:
+This is, in UNIX:
 .RS
 .IP
 .nf
@@ -638,7 +638,7 @@ Files in the user data directory are ignored.
 .TP
 .B \f[C]\-\-eol=crlf\f[]|\f[C]lf\f[]|\f[C]native\f[]
 Manually specify line endings: \f[C]crlf\f[] (Windows), \f[C]lf\f[]
-(macOS/linux/unix), or \f[C]native\f[] (line endings appropriate to the
+(macOS/Linux/UNIX), or \f[C]native\f[] (line endings appropriate to the
 OS on which pandoc is being run).
 The default is \f[C]native\f[].
 .RS
@@ -760,7 +760,7 @@ Implies \f[C]\-\-standalone\f[].
 .TP
 .B \f[C]\-\-resource\-path=\f[]\f[I]SEARCHPATH\f[]
 List of paths to search for images and other resources.
-The paths should be separated by \f[C]:\f[] on linux, unix, and macOS
+The paths should be separated by \f[C]:\f[] on Linux, UNIX, and macOS
 systems, and by \f[C];\f[] on Windows.
 If \f[C]\-\-resource\-path\f[] is not specified, the default resource
 path is the working directory.
