Handle skylighting’s new code output
-   Bump dependency on skylighting
-   Fix tests requiring the old code output

--- a/test/command/3534.md
+++ b/test/command/3534.md
@@ -2,7 +2,7 @@
 % pandoc -f latex -t html
 I want to explain the interface of \lstinline[language=Java]{public class MyClass}.
 ^D
-<p>I want to explain the interface of <code class="sourceCode java"><span class="kw">public</span> <span class="kw">class</span> MyClass</code>.</p>
+<p>I want to explain the interface of <code class="sourceCode java"><div class="sourceLine" id="1" href="#1" data-line-number="1"><span class="kw">public</span> <span class="kw">class</span> MyClass</div></code>.</p>
 
 ```
 
