Revised command test 3971 to work with Windows.

--- a/test/command/3971.md
+++ b/test/command/3971.md
@@ -1,7 +1,7 @@
 ```
-% TEXINPUTS=command pandoc -f latex -t native
+% pandoc -f latex -t native
 \documentclass{article}
-\include{3971b}
+\include{command/3971b}
 \code{f}
 \end{document}
 ^D
